--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Huiting Chen</h1>
-    <p>Hello, I am a forth year UCSD student majoring in math-CS and minor in data science. This is a webpage for lab01 of DSC106.</p>
+    <p>Hello, I am a forth year UCSD student majoring in math-CS and minor in data science. This is a webpage for lab01 of DSC106.
+        I really don't want to put my photo in a public repo, so I put a photo of turtle here.
+    </p>
+    <img src="images/turtle.jpeg" alt="a turtle I saw in San Diego zoo">
 </body>
 </html>
