--- a/index.html
+++ b/index.html
@@ -12,5 +12,11 @@
         I really don't want to put my photo in a public repo, so I put a photo of turtle here.
     </p>
     <img src="images/turtle.jpeg" alt="a turtle I saw in San Diego zoo">
+    <nav>
+        <a href="contact/">contact</a>
+        <a href="projects/">projects</a>
+        <a href="index.html">current</a>
+        <a href="https://github.com/AvailableUsernameA" target="_blank">Github profile</a>
+    </nav>
 </body>
 </html>
