try modify contacty

--- a/contact/index.html
+++ b/contact/index.html
@@ -13,5 +13,13 @@
         <a href="index.html">current</a>
         <a href="https://github.com/AvailableUsernameA" target="_blank">Github profile</a>
     </nav>
+
+    <form action="mailto:huc014@ucsd.edu" method="post" enctype="text/plain">
+        <label>email:</label>
+        <input name="email" type="email">
+        <input name="subject">
+        <textarea name="body"></textarea>
+        <button></button>
+    </form>
 </body>
 </html>
