--- a/contact/index.html
+++ b/contact/index.html
@@ -15,9 +15,11 @@
     </nav>
 
     <form action="mailto:huc014@ucsd.edu" method="post" enctype="text/plain">
-        <label>email:</label>
+        <label>Email:</label>
         <input name="email" type="email">
+        <label>Subject:</label>
         <input name="subject">
+        <label>Body:</label>
         <textarea name="body"></textarea>
         <button></button>
     </form>
