--- a/contact/index.html
+++ b/contact/index.html
@@ -8,10 +8,10 @@
 <body>
     <h1>html file in contact</h1>
     <nav>
-        <a href="../index.html">first</a>
-        <a href="../projects/">projects</a>
-        <a href="index.html">current</a>
-        <a href="https://github.com/AvailableUsernameA" target="_blank">Github profile</a>
+        <a href="../index.html">Home</a>
+        <a href="../projects/">Projects</a>
+        <a href="index.html">Contact</a>
+        <a href="https://github.com/AvailableUsernameA" target="_blank">Profile</a>
     </nav>
 
     <form action="mailto:huc014@ucsd.edu" method="post" enctype="text/plain">
@@ -21,7 +21,7 @@
         <input name="subject">
         <label>Body:</label>
         <textarea name="body"></textarea>
-        <button></button>
+        <button type="submit"></button>
     </form>
 </body>
 </html>
