--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     </p>
     <img src="images/turtle.jpeg" alt="a turtle I saw in San Diego zoo">
     <nav>
-        <a href="contact/">contact</a>
-        <a href="projects/">projects</a>
-        <a href="index.html">current</a>
-        <a href="https://github.com/AvailableUsernameA" target="_blank">Github profile</a>
+        <a href="contact/">Contact</a>
+        <a href="projects/">Projects</a>
+        <a href="index.html">Home</a>
+        <a href="https://github.com/AvailableUsernameA" target="_blank">Profile</a>
     </nav>
 </body>
 </html>
