--- a/projects/index.html
+++ b/projects/index.html
@@ -8,10 +8,10 @@
 <body>
     <h1>html file in projects</h1>
     <nav>
-        <a href="../index.html">first</a>
-        <a href="../contact/">contact</a>
-        <a href="index.html">current</a>
-        <a href="https://github.com/AvailableUsernameA" target="_blank">Github profile</a>
+        <a href="../index.html">Home</a>
+        <a href="../contact/">Contact</a>
+        <a href="index.html">Projects</a>
+        <a href="https://github.com/AvailableUsernameA" target="_blank">Profile</a>
     </nav>
 </body>
 </html>
