--- a/contact/index.html
+++ b/contact/index.html
@@ -6,7 +6,7 @@
     <title>html file in contact</title>
 </head>
 <body>
-    <h1>html file in contact</h1>
+    <h1>Contact</h1>
     <nav>
         <a href="../index.html">Home</a>
         <a href="../projects/">Projects</a>
