--- a/projects/index.html
+++ b/projects/index.html
@@ -6,7 +6,7 @@
     <title>html file in projects</title>
 </head>
 <body>
-    <h1>html file in projects</h1>
+    <h1>Projects</h1>
     <nav>
         <a href="../index.html">Home</a>
         <a href="../contact/">Contact</a>
