--- a/contact/index.html
+++ b/contact/index.html
@@ -21,7 +21,7 @@
         <input name="subject">
         <label>Body:</label>
         <textarea name="body"></textarea>
-        <button type="submit"></button>
+        <button>Submit</button>
     </form>
 </body>
 </html>
