--- a/contact/index.html
+++ b/contact/index.html
@@ -15,12 +15,12 @@
     </nav>
 
     <form action="mailto:huc014@ucsd.edu" method="post" enctype="text/plain">
-        <label>Email:</label>
-        <input name="email" type="email">
-        <label>Subject:</label>
-        <input name="subject">
-        <label>Body:</label>
-        <textarea name="body"></textarea>
+        <label for="email">Email:</label>
+        <input id="email" name="email" type="email">
+        <label for="subject">Subject:</label>
+        <input id="subject" name="subject">
+        <label for="body">Body:</label>
+        <textarea id="body" name="body"></textarea>
         <button>Submit</button>
     </form>
 </body>
