--- a/contact/index.html
+++ b/contact/index.html
@@ -8,19 +8,21 @@
 <body>
     <h1>Contact</h1>
     <nav>
-        <a href="../index.html">Home</a>
-        <a href="../projects/">Projects</a>
-        <a href="index.html">Contact</a>
-        <a href="https://github.com/AvailableUsernameA" target="_blank">Profile</a>
+        <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../projects/">Projects</a></li>
+        <li><a href="index.html">Contact</a></li>
+        <li><a href="https://github.com/AvailableUsernameA" target="_blank">Profile</a></li>
+        </ul>
     </nav>
 
     <form action="mailto:huc014@ucsd.edu" method="post" enctype="text/plain">
-        <label for="email">Email:</label>
-        <input id="email" name="email" type="email">
-        <label for="subject">Subject:</label>
-        <input id="subject" name="subject">
-        <label for="body">Body:</label>
-        <textarea id="body" name="body"></textarea>
+        <label>Email:</label>
+        <input name="email" type="email">
+        <label>Subject:</label>
+        <input name="subject">
+        <label>Body:</label>
+        <textarea name="body"></textarea>
         <button>Submit</button>
     </form>
 </body>
