--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
     </p>
     <img src="images/turtle.jpeg" alt="a turtle I saw in San Diego zoo">
     <nav>
-        <a href="contact/">Contact</a>
-        <a href="projects/">Projects</a>
-        <a href="index.html">Home</a>
-        <a href="https://github.com/AvailableUsernameA" target="_blank">Profile</a>
+        <ul>
+        <li><a href="contact/">Contact</a></li>
+        <li><a href="projects/">Projects</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="https://github.com/AvailableUsernameA" target="_blank">Profile</a></li>
+        </ul>
     </nav>
 </body>
 </html>
