--- a/projects/index.html
+++ b/projects/index.html
@@ -8,10 +8,12 @@
 <body>
     <h1>Projects</h1>
     <nav>
-        <a href="../index.html">Home</a>
-        <a href="../contact/">Contact</a>
-        <a href="index.html">Projects</a>
-        <a href="https://github.com/AvailableUsernameA" target="_blank">Profile</a>
+        <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../contact/">Contact</a></li>
+        <li><a href="index.html">Projects</a></li>
+        <li><a href="https://github.com/AvailableUsernameA" target="_blank">Profile</a></li>
+        </ul>
     </nav>
 </body>
 </html>
