--- a/contact/index.html
+++ b/contact/index.html
@@ -13,6 +13,7 @@
         <li><a href="../projects/">Projects</a></li>
         <li><a href="index.html">Contact</a></li>
         <li><a href="https://github.com/AvailableUsernameA" target="_blank">Profile</a></li>
+        <li><a href="../CV.html">CV</a></li>
         </ul>
     </nav>
 
