--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li><a href="projects/">Projects</a></li>
         <li><a href="index.html">Home</a></li>
         <li><a href="https://github.com/AvailableUsernameA" target="_blank">Profile</a></li>
+        <li><a href="CV.html">CV</a></li>
         </ul>
     </nav>
 </body>
