--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <nav>
+        <ul class="links">
+            <li><a href="index.html" class="current">Home</a></li>
+            <li><a href="contact/index.html">Contact</a></li>
+            <li><a href="projects/index.html">Projects</a></li>
+            <li><a href="https://github.com/AvailableUsernameA" target="_blank">Profile</a></li>
+            <li><a href="CV.html">CV</a></li>
+        </ul>
+    </nav>
     <h1>Huiting Chen</h1>
     <p>Hello, I am a forth year UCSD student majoring in math-CS and minor in data science. This is a webpage for lab01 of DSC106.
         I really don't want to put my photo in a public repo, so I put a photo of turtle here.
     </p>
     <img src="images/turtle.jpeg" alt="a turtle I saw in San Diego zoo">
-    <nav>
-        <ul>
-        <li><a href="contact/">Contact</a></li>
-        <li><a href="projects/">Projects</a></li>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="https://github.com/AvailableUsernameA" target="_blank">Profile</a></li>
-        <li><a href="CV.html">CV</a></li>
-        </ul>
-    </nav>
 </body>
 </html>
