--- a/projects/index.html
+++ b/projects/index.html
@@ -4,17 +4,80 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>html file in projects</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Projects</h1>
     <nav>
-        <ul>
+        <ul class="links">
         <li><a href="../index.html">Home</a></li>
-        <li><a href="../contact/">Contact</a></li>
-        <li><a href="index.html">Projects</a></li>
+        <li><a href="../contact/index.html">Contact</a></li>
+        <li><a href="index.html" class="current">Projects</a></li>
         <li><a href="https://github.com/AvailableUsernameA" target="_blank">Profile</a></li>
         <li><a href="../CV.html">CV</a></li>
         </ul>
     </nav>
+    <h1>Projects</h1>
+    <div class="projects">
+        <article>
+            <h2>Lorem ipsum dolor sit.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore sunt velit tenetur numquam! Accusamus nemo iusto facilis, unde perferendis quibusdam aut eveniet placeat, quod autem asperiores in hic corporis aspernatur.</p>
+        </article>
+        <article>
+            <h2>Adipisci laborum alias dolore?</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Aliquam error libero, tempore dolore ex doloribus voluptatum culpa accusantium, distinctio beatae ut! Aspernatur quisquam itaque quas! Ipsum ducimus deserunt numquam ad dignissimos quod. Iure sequi culpa nobis totam veniam?</p>
+        </article>
+        <article>
+            <h2>Maiores accusantium quo modi.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Laboriosam, deleniti. Nam consequuntur accusantium architecto, suscipit doloremque cum vitae iusto officia odit error, ipsum sapiente, quos quae totam quasi repellendus sit? Officia accusantium error eveniet. Soluta laboriosam pariatur possimus.</p>
+        </article>
+        <article>
+            <h2>Nulla earum eaque esse!</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Voluptates earum atque magni odio provident asperiores aliquam dolores harum optio nemo omnis id molestiae veritatis deleniti, non delectus eius saepe soluta? Sint molestiae quidem asperiores cum esse impedit similique.</p>
+        </article>
+        <article>
+            <h2>A aut voluptas autem!</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Assumenda sit quia recusandae veniam, numquam architecto. Molestiae, esse cumque soluta rem omnis culpa nesciunt repellat, iste nihil totam eveniet ex minima at fugiat? Facere repudiandae earum ex et illum?</p>
+        </article>
+        <article>
+            <h2>Voluptas, quam. Voluptates, omnis!</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Ipsam doloremque beatae quisquam consequuntur saepe totam expedita mollitia facere ad suscipit eius, unde neque dolor velit odit minus architecto eveniet fugiat illo tempora in est laboriosam. Dolor, voluptas corrupti.</p>
+        </article>
+        <article>
+            <h2>Placeat quos quas eveniet.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Amet vitae, iste autem alias recusandae sapiente necessitatibus aperiam cupiditate ex labore accusamus nostrum tempore excepturi corporis? Nesciunt illum ad iste molestiae inventore laboriosam. Inventore vel et nobis odit nihil?</p>
+        </article>
+        <article>
+            <h2>Voluptate dolores molestiae mollitia?</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Itaque quos vitae culpa voluptatem obcaecati. Eos at natus consectetur, incidunt provident totam blanditiis, ex mollitia necessitatibus iste pariatur, labore minus. Consequuntur odio modi excepturi vitae, libero dolore nulla commodi?</p>
+        </article>
+        <article>
+            <h2>Iste placeat in fuga!</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Numquam dolorem voluptatibus natus eos adipisci sapiente, totam error, nihil ea repellat eum itaque. Ipsam exercitationem, modi perferendis magnam, ab nihil error quibusdam nam consequatur ut, debitis deleniti maxime ea.</p>
+        </article>
+        <article>
+            <h2>Impedit quisquam nisi aliquam?</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Dolorem perferendis, minima amet sequi provident magnam obcaecati est? Cupiditate voluptatibus sunt molestiae repellendus in blanditiis illo rerum ab, molestias, quia, aut animi vitae libero quo rem magnam quibusdam odit!</p>
+        </article>
+        <article>
+            <h2>Similique natus ad rerum?</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Architecto, labore accusamus provident, voluptate expedita libero omnis facere voluptatem esse tempore modi nostrum ut ipsa animi repudiandae officiis fuga, cupiditate exercitationem nobis ab. Fuga repellat ipsam similique eum expedita?</p>
+        </article>
+        <article>
+            <h2>Facilis libero unde totam?</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Molestias, laudantium! Sapiente laboriosam dicta dolorem tempore voluptate! Explicabo blanditiis quia quibusdam id totam architecto pariatur vitae, rerum reprehenderit ut consequatur molestias beatae repellat rem at. Ab officiis temporibus unde?</p>
+        </article>
+    </div>
 </body>
 </html>
