--- a/contact/index.html
+++ b/contact/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>html file in contact</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Contact</h1>
     <nav>
-        <ul>
+        <ul class="links">
         <li><a href="../index.html">Home</a></li>
-        <li><a href="../projects/">Projects</a></li>
-        <li><a href="index.html">Contact</a></li>
+        <li><a href="index.html" class="current">Contact</a></li>
+        <li><a href="../projects/index.html">Projects</a></li>
         <li><a href="https://github.com/AvailableUsernameA" target="_blank">Profile</a></li>
         <li><a href="../CV.html">CV</a></li>
         </ul>
     </nav>
-
+    <h1>Contact</h1>
     <form action="mailto:huc014@ucsd.edu" method="post" enctype="text/plain">
         <label>Email:</label>
         <input name="email" type="email">
@@ -24,7 +24,7 @@
         <input name="subject">
         <label>Body:</label>
         <textarea name="body"></textarea>
-        <button>Submit</button>
+        <button>Send</button>
     </form>
 </body>
 </html>
