--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <script type="module" src="global.js"></script>
     <nav>
         <ul class="links">
             <li><a href="index.html" class="current">Home</a></li>
