--- a/projects/index.html
+++ b/projects/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
+    <script type="module" src="global.js"></script>
     <nav>
         <ul class="links">
         <li><a href="../index.html">Home</a></li>
