--- a/CV.html
+++ b/CV.html
@@ -15,7 +15,7 @@
                 <li><a href="contact/index.html">Contact</a></li>
                 <li><a href="projects/index.html">Projects</a></li>
                 <li><a href="https://github.com/AvailableUsernameA" target="_blank">Profile</a></li>
-                <li><a href="CV.html" class="current">CV</a></li>
+                <li><a href="CV.html">CV</a></li>
             </ul>
         </nav>
         <h1>Huiting Chen</h1>
