--- a/contact/index.html
+++ b/contact/index.html
@@ -11,7 +11,7 @@
     <nav>
         <ul class="links">
         <li><a href="../index.html">Home</a></li>
-        <li><a href="index.html" class="current">Contact</a></li>
+        <li><a href="index.html">Contact</a></li>
         <li><a href="../projects/index.html">Projects</a></li>
         <li><a href="https://github.com/AvailableUsernameA" target="_blank">Profile</a></li>
         <li><a href="../CV.html">CV</a></li>
