--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script type="module" src="global.js"></script>
     <nav>
         <ul class="links">
-            <li><a href="index.html" class="current">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="contact/index.html">Contact</a></li>
             <li><a href="projects/index.html">Projects</a></li>
             <li><a href="https://github.com/AvailableUsernameA" target="_blank">Profile</a></li>
