--- a/projects/index.html
+++ b/projects/index.html
@@ -12,7 +12,7 @@
         <ul class="links">
         <li><a href="../index.html">Home</a></li>
         <li><a href="../contact/index.html">Contact</a></li>
-        <li><a href="index.html" class="current">Projects</a></li>
+        <li><a href="index.html">Projects</a></li>
         <li><a href="https://github.com/AvailableUsernameA" target="_blank">Profile</a></li>
         <li><a href="../CV.html">CV</a></li>
         </ul>
