--- a/CV.html
+++ b/CV.html
@@ -9,7 +9,7 @@
 <body>
     <script type="module" src="global.js"></script>
     <header>
-        <nav>
+        <!-- <nav>
             <ul class="links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="contact/index.html">Contact</a></li>
@@ -17,7 +17,7 @@
                 <li><a href="https://github.com/AvailableUsernameA" target="_blank">Profile</a></li>
                 <li><a href="CV.html">CV</a></li>
             </ul>
-        </nav>
+        </nav> -->
         <h1>Huiting Chen</h1>
     </header>
 
