--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <script type="module" src="global.js"></script>
-    <nav>
+    <!-- <nav>
         <ul class="links">
             <li><a href="index.html">Home</a></li>
             <li><a href="contact/index.html">Contact</a></li>
@@ -16,7 +16,7 @@
             <li><a href="https://github.com/AvailableUsernameA" target="_blank">Profile</a></li>
             <li><a href="CV.html">CV</a></li>
         </ul>
-    </nav>
+    </nav> -->
     <h1>Huiting Chen</h1>
     <p>Hello, I am a forth year UCSD student majoring in math-CS and minor in data science. This is a webpage for lab01 of DSC106.
         I really don't want to put my photo in a public repo, so I put a photo of turtle here.
