--- a/projects/index.html
+++ b/projects/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <script type="module" src="../global.js"></script>
-    <nav>
+    <!-- <nav>
         <ul class="links">
         <li><a href="../index.html">Home</a></li>
         <li><a href="../contact/index.html">Contact</a></li>
@@ -16,7 +16,7 @@
         <li><a href="https://github.com/AvailableUsernameA" target="_blank">Profile</a></li>
         <li><a href="../CV.html">CV</a></li>
         </ul>
-    </nav>
+    </nav> -->
     <h1>Projects</h1>
     <div class="projects">
         <article>
