--- a/contact/index.html
+++ b/contact/index.html
@@ -18,9 +18,10 @@
         </ul>
     </nav> -->
     <h1>Contact</h1>
-    <form action="mailto:huc014@ucsd.edu" method="post" enctype="text/plain">
-        <label>Email:</label>
-        <input name="email" type="email">
+    <!-- <form action="mailto:huc014@ucsd.edu" method="post" enctype="text/plain"> -->
+    <form action="mailto:huc014@ucsd.edu">
+        <!-- <label>Email:</label>
+        <input name="email" type="email"> -->
         <label>Subject:</label>
         <input name="subject">
         <label>Body:</label>
