--- a/projects/index.html
+++ b/projects/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <script type="module" src="../global.js"></script>
+    <script type="module" src="./projects.js"></script>
     <!-- <nav>
         <ul class="links">
         <li><a href="../index.html">Home</a></li>
@@ -17,9 +18,9 @@
         <li><a href="../CV.html">CV</a></li>
         </ul>
     </nav> -->
-    <h1>Projects</h1>
+    <h1 class="projects-title">Projects</h1>
     <div class="projects">
-        <article>
+        <!-- <article>
             <h2>Lorem ipsum dolor sit.</h2>
             <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore sunt velit tenetur numquam! Accusamus nemo iusto facilis, unde perferendis quibusdam aut eveniet placeat, quod autem asperiores in hic corporis aspernatur.</p>
@@ -78,7 +79,7 @@
             <h2>Facilis libero unde totam?</h2>
             <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
             <p>Molestias, laudantium! Sapiente laboriosam dicta dolorem tempore voluptate! Explicabo blanditiis quia quibusdam id totam architecto pariatur vitae, rerum reprehenderit ut consequatur molestias beatae repellat rem at. Ab officiis temporibus unde?</p>
-        </article>
+        </article> -->
     </div>
 </body>
 </html>
