--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <script type="module" src="global.js"></script>
+    <script src="index.js" type="module" defer></script>
     <!-- <nav>
         <ul class="links">
             <li><a href="index.html">Home</a></li>
@@ -22,5 +23,11 @@
         I really don't want to put my photo in a public repo, so I put a photo of turtle here.
     </p>
     <img src="images/turtle.jpeg" alt="a turtle I saw in San Diego zoo">
+    
+    <h2>Latest Projects</h2>
+    <div class="projects"></div>
+    
+    <h2>GitHub Stats</h2>
+    <div id="profile-stats"></div>
 </body>
 </html>
