--- a/meta/index.html
+++ b/meta/index.html
@@ -12,9 +12,22 @@
     <h1>Meta</h1>
     <p>This page includes stats about the code of this website.</p>
     <h2>Summary</h2>
+
+    <!-- <div class="meta-slider">
+        <label>Show commits until:</label>
+        <input id="time-slider" type="range" min="0" max="100" value="-1">
+        <time id="selected-time">time</time>
+    </div> -->
     <div id="stats"></div>
-    <h2>Commits by time of day</h2>
-    <div id="chart"></div>
+    <!-- <div id="chart"></div> -->
+    <div id="scrolly-1">
+      <div id="scatter-story"></div>
+      <div id="scatter-plot">
+        <!-- old code -->
+        <h2>Commits by time of day</h2>
+      </div>
+    </div>
+
 
     <dl id="commit-tooltip" class="info tooltip" hidden>
         <dt>Commit</dt>
@@ -37,5 +50,15 @@
     </dl>
     <p id="selection-count">No commits selected</p>
     <dl id="language-breakdown" class="stats"></dl>
+  <!-- <div>
+      <dl id="files">
+      </dl>
+  </div> -->
+  <div id="scrolly-2">
+    <div id="files">
+      <!-- old code -->
+    </div>
+    <div id="scatter-story2"></div>
+  </div>
 </body>
 </html>
